# MHE

./: .gitignore  CMakeLists.txt  README.md
Nonogram/: Nonogram.cpp  funcs.cpp  funcs.h  main.cpp  struct.cpp  struct.h  tp_args.hpp
data/: condition.json  condition2.json  zadanie1.json
src/: main.cpp  przyklad.cpp
zadanie1/: zadanie1.cpp
